--- a/src/resources/views/admin.hbs
+++ b/src/resources/views/admin.hbs
@@ -25,10 +25,10 @@
     <div class="col-sm-2 bg-right">
       <h3 style="text-align:center;">MENU</h3>
       <ul class="ad2">
-        <li><a href="/danhsach_dk" target="ifarm_admin">Danh sách đăng ký</a></li><br>
-        <li><a href="/goicuocdoanhnghiep" target="ifarm_admin">Gói cước doanh nghiệp</a></li><br>
-        <li><a href="/goicuocgiadinh" target="ifarm_admin">Gói cước gia đình</a></li><br>
-        <li><a href="/combo" target="ifarm_admin">COMBO gói cước</a></li><br>
+        <li><a href="/danhsach_dk" target="ifarm_admin">Danh sách đăng ký</a></li>
+        <li><a href="/goicuocdoanhnghiep" target="ifarm_admin">Gói cước doanh nghiệp</a></li>
+        <li><a href="/goicuocgiadinh" target="ifarm_admin">Gói cước gia đình</a></li>
+        <li><a href="/combo" target="ifarm_admin">COMBO gói cước</a></li>
         <li><a href="/promotion" target="ifarm_admin">Khuyến mãi</a></li>
         <li><a href="/phone" target="ifarm_admin">Chỉnh sửa Số điện thoại</a></li>
       </ul>
