--- a/src/resources/views/login.hbs
+++ b/src/resources/views/login.hbs
@@ -8,10 +8,10 @@
 <div class="container bg-admin">
 
   <div class="row">
-    <div class="col-sm-9  ad1">
-      <h1>TRANG QUẢN TRỊ</h1>
+    <div class="col-sm-9  ad1 mt-5">
+      <h1 style="color: #EE0033;">TRANG QUẢN TRỊ</h1>
     </div>
-    <div class="col-sm-3 ">
+    <div class="col-sm-3 mt-3">
       {{#if token}}
       <h4 style="margin-top:5%;">XIN CHÀO ADMIN!</h4>
       
@@ -27,10 +27,10 @@
       <h3 style="text-align:center;">MENU</h3>
       <ul class="ad2">
        
-        <li class="nav-item"><a href="/danhsach_dk" target="ifarm_admin" class="nav-link">Danh sách đăng ký</a></li><br>
-        <li class="nav-item"><a href="/goicuocdoanhnghiep" target="ifarm_admin" class="nav-link">Gói cước doanh nghiệp</a></li><br>
-        <li class="nav-item"><a href="/goicuocgiadinh" target="ifarm_admin" class="nav-link">Gói cước gia đình</a></li><br>
-        <li class="nav-item"><a href="/combo" target="ifarm_admin" class="nav-link">COMBO gói cước</a></li><br>
+        <li class="nav-item"><a href="/danhsach_dk" target="ifarm_admin" class="nav-link">Danh sách đăng ký</a></li>
+        <li class="nav-item"><a href="/goicuocdoanhnghiep" target="ifarm_admin" class="nav-link">Gói cước doanh nghiệp</a></li>
+        <li class="nav-item"><a href="/goicuocgiadinh" target="ifarm_admin" class="nav-link">Gói cước gia đình</a></li>
+        <li class="nav-item"><a href="/combo" target="ifarm_admin" class="nav-link">COMBO gói cước</a></li>
         <li class="nav-item"><a href="/promotion" target="ifarm_admin" class="nav-link">Khuyến mãi</a></li>
         <li class="nav-item"><a href="/phone" target="ifarm_admin" class="nav-link">Chỉnh sửa Số điện thoại</a></li>
       </ul>
