--- a/src/resources/views/internet_combo.hbs
+++ b/src/resources/views/internet_combo.hbs
@@ -78,7 +78,8 @@
                             <div class="row">
                                 {{#each icombo}}
                                 <div class="col-sm-4">
-                                    <div class="card" style="border: 1px solid #e5e5e5;">
+                                    <div class="card" style="border: 1px solid #e5e5e5;
+                                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
                                         <div class="card-body ">
                                             <h1 class="card-title"
                                                 style="color: #728092;font-size:25px;font-weight: bold;text-align: center;width: 100%;">
