update giao dien home

--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -405,8 +405,17 @@
                     <img src="img/dinh-vi-o-to.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
 
                 </div><br>
+                {{!-- --}}
+                <div class="tintuc">
+                    <p style="text-align: center;color:red;font-weight: 600;">TV360 Viettel - App xem Truyền Hình trên Điện Thoại, Tivi miễn phí </p>
+                    <img src="img/df2b81f966f5306494fb35669df1dc2e_S.jpg " alt="" style="width:100%;border-radius: 0 0 10px 10px;">
 
+                </div><br>
+                <div class="tintuc">
+                    <p style="text-align: center;color:red;font-weight: 600;">Viettel đóng góp 450 tỷ đồng vào quỹ vaccine phòng Covid-19</p>
+                    <img src="img/1c14018b9c4f9aa0ec57ff570334db4f_S.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
 
+                </div><br>
             </div>
         </div>
 
