update giao dien home moi

--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -113,7 +113,7 @@
 
                         </div><br>
                         <p class="nav-link" style="color: red;text-align: center;">Giá trên đã bao gồm 10% thuế VAT</p>
-                        <a class="nav-link" href="internet" style="color: red;text-align: center;">Xem tất cả</a>
+                        <a class="nav-link" href="internet" style="text-align: center;">Xem tất cả</a>
                         <br>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
 
                         </div><br>
                         <p class="nav-link" style="color: red;text-align: center;">Giá trên đã bao gồm 10% thuế VAT</p>
-                        <a class="nav-link" href="internet_giadinh" style="color: red;text-align: center;">Xem tất
+                        <a class="nav-link" href="internet_giadinh" style="text-align: center;">Xem tất
                             cả</a>
                         <br>
                         <div class="container">
@@ -321,11 +321,7 @@
                                                         Đăng ký
                                                     </button>
                                                 </div>
-                                                
-
                                             </div>
-
-
                                         </div>
                                     </div>
                                 </div>
@@ -336,7 +332,7 @@
 
                         </div><br>
                         <p class="nav-link" style="color: red;text-align: center;">Giá trên đã bao gồm 10% thuế VAT</p>
-                        <a class="nav-link" href="internet_combo" style="color: red;text-align: center;">Xem tất cả</a>
+                        <a class="nav-link" href="internet_combo" style="text-align: center;">Xem tất cả</a>
                         <br>
                     </div>
                 </div>
