update danh sach dang ky

--- a/src/resources/views/danhsach_dk.hbs
+++ b/src/resources/views/danhsach_dk.hbs
@@ -35,7 +35,7 @@
                       <td>{{this.sdt}}</td>
                       <td>{{this.diachi}}</td>
                       <td>{{this.goicuoc}}</td>
-                      <td>{{this.createdAt}}</td>
+                      <td>{{this.thoigian}}</td>
                       {{!-- <td><button type="button" class="btn btn-primary" id="check" data-id="{{this._id}}"
                           onclick="check_xuly()">Chưa xử lý</button></td> --}}
                       <td><a class="btn btn-danger" href="#" role="button" data-toggle="modal" data-id="{{this._id}}"
