--- a/src/resources/views/courses/edit_giadinh.hbs
+++ b/src/resources/views/courses/edit_giadinh.hbs
@@ -13,7 +13,7 @@
                 <h1>Gói cước gia đình</h1>
                 <div class="mt-4">
                   <a class="btn btn-primary" href="/goicuocgiadinh" role="button">Quay lại</a>
-                  <h1 class="mt-3">Thêm gói cước</h1>
+                  <h1 class="mt-3">Sửa gói cước</h1>
                   
                   <form action="/{{edit_giadinh._id}}/update_goicuocgiadinh?_method=PUT" method="POST" class="mt-4">
                     <div class="form-group">
