--- a/src/resources/views/courses/edit_combo.hbs
+++ b/src/resources/views/courses/edit_combo.hbs
@@ -13,7 +13,7 @@
                 <h1>Combo Gói Cước</h1>
                 <div class="mt-4">
                   <a class="btn btn-primary" href="/combo" role="button">Quay lại</a>
-                  <h1 class="mt-3">Thêm gói cước</h1>
+                  <h1 class="mt-3">Sửa gói cước</h1>
                   
                   <form action="/{{edit_combo._id}}/update_combo?_method=PUT" method="POST" class="mt-4">
                     <div class="form-group">
