--- a/src/resources/views/admin.hbs
+++ b/src/resources/views/admin.hbs
@@ -1,36 +1,38 @@
 <script>
-  localStorage.setItem('token', '{{token}}');
-  var temp = localStorage.getItem('token');
+  sessionStorage.setItem('token', '{{token}}');
+  var temp = sessionStorage.getItem('token');
   function handleLogout(){
-    localStorage.clear();
+    sessionStorage.clear();
   }
 </script>
 <div class="container bg-admin">
 
   <div class="row">
-    <div class="col-sm-9  ad1">
-      <h1>TRANG QUẢN TRỊ</h1>
+    <div class="col-sm-9  ad1 mt-5">
+      <h1 style="color: #EE0033;">TRANG QUẢN TRỊ</h1>
     </div>
-    <div class="col-sm-3 ">
-      {{#if token}}
+    <div class="col-sm-3 mt-3">
+      
       <h4 style="margin-top:5%;">XIN CHÀO ADMIN!</h4>
-      {{else}}
+      
 
-      {{/if }}
-      <a href="/login" onclick="handleLogout()">Đăng xuất</a>
+      
+      <a href="/login" onclick="handleLogout()"><input type="submit" value="Đăng xuất" style="background-color: #EE0033;"></a>
+      <a href="/password_admin" target="ifarm_admin"><input type="submit" value="Đổi mật khẩu" style="background-color: #EE0033;"></a>
     </div>
   </div>
 <br><hr>
   <div class="row">
-    <div class="col-sm-2 bg-right">
+    <div class="col-sm-2 bg-right bg-dark">
       <h3 style="text-align:center;">MENU</h3>
       <ul class="ad2">
-        <li><a href="/danhsach_dk" target="ifarm_admin">Danh sách đăng ký</a></li>
-        <li><a href="/goicuocdoanhnghiep" target="ifarm_admin">Gói cước doanh nghiệp</a></li>
-        <li><a href="/goicuocgiadinh" target="ifarm_admin">Gói cước gia đình</a></li>
-        <li><a href="/combo" target="ifarm_admin">COMBO gói cước</a></li>
-        <li><a href="/promotion" target="ifarm_admin">Khuyến mãi</a></li>
-        <li><a href="/phone" target="ifarm_admin">Chỉnh sửa Số điện thoại</a></li>
+       
+        <li class="nav-item"><a href="/danhsach_dk" target="ifarm_admin" class="nav-link">Danh sách đăng ký</a></li>
+        <li class="nav-item"><a href="/goicuocdoanhnghiep" target="ifarm_admin" class="nav-link">Gói cước doanh nghiệp</a></li>
+        <li class="nav-item"><a href="/goicuocgiadinh" target="ifarm_admin" class="nav-link">Gói cước gia đình</a></li>
+        <li class="nav-item"><a href="/combo" target="ifarm_admin" class="nav-link">COMBO gói cước</a></li>
+        <li class="nav-item"><a href="/promotion" target="ifarm_admin" class="nav-link">Khuyến mãi</a></li>
+        <li class="nav-item"><a href="/phone" target="ifarm_admin" class="nav-link">Chỉnh sửa Số điện thoại</a></li>
       </ul>
     </div>
     <div class="col-sm-10 bg-left">
