--- a/src/resources/views/page_admin_viettel.hbs
+++ b/src/resources/views/page_admin_viettel.hbs
@@ -1,5 +1,8 @@
 <div class="login_admin" >
     <h1 style="text-align: center;color: black;">Đăng nhập</h1>
+    {{#if error}}
+              <h4 style="color: red;text-align:center;">{{error}}</h4>
+    {{/if}}
     <form action="/login" method="POST">
         <div class="form-group">
             <label for="user" style="color: #FF0000;">Tên tải khoản</label>
@@ -11,6 +14,7 @@
         </div>
         <button type="submit" class="btn btn-primary login_admin_1">Đăng nhập</button>
     </form>
-    <p style="color: #FF0000;text-align: center;">{{err}}</p>
+    <br>
+    
 
 </div>
