update header phone mobile

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -54,7 +54,7 @@
     <div class="mobile-hotline-left">
         <a href="https://zalo.me/{{this.sdt}}" target="blank">Chat zalo</a>
     </div>
-    <div class="mobile-hotline-right"><a href="tel:{{this.sdt}}" target="blank">Gọi điện ngay</a></div>
+    <div class="mobile-hotline-right"><a href="tel:{{this.sdt}}" target="blank"><img src="img/phone.png" alt="HOTLINE" style="width: 30%;height: 85%;">: {{this.sdt}}</a></div>
 </div>
 {{/each }}
 <script>
