update header phones

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -51,10 +51,10 @@
     </div>
 </a>
 <div class="mobile-hotline">
-    <div class="mobile-hotline-left">
+    <div class="mobile-hotline-left" style="position: relative;">
         <a href="https://zalo.me/{{this.sdt}}" target="blank">Chat zalo</a>
     </div>
-    <div class="mobile-hotline-right"><a href="tel:{{this.sdt}}" target="blank"><img src="img/phone.png" alt="HOTLINE" style="width: 30%;height: 85%;">: {{this.sdt}}</a></div>
+    <div class="mobile-hotline-right" style="position: relative;"><a href="tel:{{this.sdt}}" target="blank"><img src="img/phone.png" alt="HOTLINE" style="width: 30%;height: 85%;">: {{this.sdt}}</a></div>
 </div>
 {{/each }}
 <script>
