update giao dien đt

--- a/src/resources/views/internet_giadinh.hbs
+++ b/src/resources/views/internet_giadinh.hbs
@@ -1,4 +1,3 @@
-
 {{!-- ======= --}}
 <div class="container backgroud-container">
     {{> header}}
@@ -9,7 +8,7 @@
                     <h1 style="text-align: center;" class="test">INTERNET CÁP QUANG VIETTEL CẦN THƠ</h1>
                 </div>
                 <br>
-                
+
                 <div>
                     <p style="text-align: center;font-style: italic;">CÁC GÓI CƯỚC GIA ĐÌNH</p>
                 </div>
@@ -58,9 +57,9 @@
                                             </select>
                                         </div>
                                         <div class="form-group">
-                                           
-                                            <input type="hidden" class="form-control" value="0"
-                                                name="status" id="status">
+
+                                            <input type="hidden" class="form-control" value="0" name="status"
+                                                id="status">
                                         </div>
                                         <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Đăng
                                             ký</button>
@@ -85,22 +84,23 @@
                                                 {{this.name_gcgd}}</h1>
                                             <br><br>
                                             <hr>
-                                            <p class="price" style="color:#EE0033;font-faimily:  roboto;">{{this.price_gd}}(VNĐ)/1 Tháng</p>
+                                            <p class="price" style="color:#EE0033;font-faimily:  roboto;">
+                                                {{this.price_gd}}(VNĐ)/1 Tháng</p>
                                             <hr>
                                             <p style="color: #252525;font-weight: bold;">Băng thông</p>
                                             <p style="color: #252525;"> {{this.data_gd}}</p>
-                                            
+
                                             <p style="color: #252525;font-weight: bold;">Khuyến mãi</p>
                                             <p>{{this.promotions_gd}}</p>
-                                            
+
                                             <div class="row">
                                                 <div class="col">
                                                     <button type="button" class="btn btn-danger" data-toggle="modal"
-                                                        data-target="#family"  style="width: 100%;">
+                                                        data-target="#family" style="width: 100%;">
                                                         Đăng ký
                                                     </button>
                                                 </div>
-                                                
+
 
                                             </div>
 
@@ -122,12 +122,14 @@
                         </div>
                     </div>
                 </div>
-                
+
 
             </div>
             {{!-- col-8 --}}
             <div class="col-sm-4 backgroud-2">
-                <div class="titletintuc "><h1 class="test">TIN TỨC SỰ KIỆN</h1></div><br><br><br>
+                <div class="titletintuc ">
+                    <h1 class="test">TIN TỨC SỰ KIỆN</h1>
+                </div><br><br><br>
                 <div class="tintuc">
                     <img src="img/lienhe.png" alt="" style="width:100%;border-radius: 10px 10px 0 0;">
                     <p style="text-align: center;color:red;">LIÊN HỆ TƯ VẤN / LẮP ĐẶT</p>
@@ -137,48 +139,51 @@
                 </div><br>
                 <div class="tintuc">
                     <p style="text-align: center;color:red;">SMART MOTOR VIETTEL</p>
-                    <img src="img/chong-trom-xe-may-viettel-remote-w2.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
-                    
+                    <img src="img/chong-trom-xe-may-viettel-remote-w2.jpg" alt=""
+                        style="width:100%;border-radius: 0 0 10px 10px;">
+
                 </div><br>
                 <div class="tintuc">
                     <p style="text-align: center;color:red;">THIẾT BỊ GIÁM SÁT HÀNH TRÌNH</p>
-                    <img src="img/Bảng-giá-lắp-đặt-thiết-bị-giám-sát-hành-viettel-1.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
-                    
+                    <img src="img/Bảng-giá-lắp-đặt-thiết-bị-giám-sát-hành-viettel-1.jpg" alt=""
+                        style="width:100%;border-radius: 0 0 10px 10px;">
+
                 </div><br>
                 <div class="tintuc">
                     <p style="text-align: center;color:red;">KHÓA CHỐNG TRỘM XE MÁY</p>
                     <img src="img/chong-trom-xe-may-remote.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
-                    
+
                 </div><br>
                 <div class="tintuc">
                     <p style="text-align: center;color:red;">CHỮ KÝ SỐ VIETTEL</p>
                     <img src="img/chu-ky-so-viettel-ca.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
-                    
+
                 </div><br>
                 <div class="tintuc">
                     <p style="text-align: center;color:red;">HÓA ĐƠN ĐIỆN TỬ VIETTEL</p>
                     <img src="img/hoa-don-dien-tu.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
-                    
+
                 </div><br>
                 <div class="tintuc">
                     <p style="text-align: center;color:red;">LẮP ĐẶT CÁP QUANG VIETTEL</p>
-                    <img src="img/lap-dat-internet-quan-9-10-1.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
-                    
+                    <img src="img/lap-dat-internet-quan-9-10-1.jpg" alt=""
+                        style="width:100%;border-radius: 0 0 10px 10px;">
+
                 </div><br>
                 <div class="tintuc">
                     <p style="text-align: center;color:red;">ĐỊNH VỊ Ô TÔ VIETTEL</p>
                     <img src="img/dinh-vi-o-to.jpg" alt="" style="width:100%;border-radius: 0 0 10px 10px;">
-                    
+
                 </div><br>
-                
-                
+
+
             </div>
         </div>
 
-    
+
     </div>
     <div class="footer-relative">{{> footer}}</div>
-    
 
-    
+
+
 </div>
