--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -52,7 +52,7 @@
 </a>
 <div class="mobile-hotline">
     <div class="mobile-hotline-left" style="position: relative;">
-        <a href="https://zalo.me/{{this.sdt}}" target="blank">Chat zalo</a>
+        <a href="https://zalo.me/{{this.sdt}}" target="blank"><img src="img/logo-zalo-png-vertor-jpeg.jpg.webp" alt="HOTLINE" style="width: 30%;height: 80%;">  Chat zalo</a>
     </div>
     <div class="mobile-hotline-right" style="position: relative;"><a href="tel:{{this.sdt}}" target="blank"><img src="img/phone.png" alt="HOTLINE" style="width: 30%;height: 85%;">: {{this.sdt}}</a></div>
 </div>
