--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -25,7 +25,7 @@
 
                                 <!-- Modal Header -->
                                 <div class="modal-header">
-                                    <h4 class="modal-title">Đắng ký gói cước</h4>
+                                    <h4 class="modal-title">Đăng ký gói cước</h4>
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
 
@@ -135,7 +135,7 @@
 
                                 <!-- Modal Header -->
                                 <div class="modal-header">
-                                    <h4 class="modal-title">Đắng ký gói cước</h4>
+                                    <h4 class="modal-title">Đăng ký gói cước</h4>
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
 
@@ -248,7 +248,7 @@
 
                                 <!-- Modal Header -->
                                 <div class="modal-header">
-                                    <h4 class="modal-title">Đắng ký gói cước</h4>
+                                    <h4 class="modal-title">Đăng ký gói cước</h4>
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
 
