update goi cuoc

--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -118,7 +118,7 @@
 
                         </div><br>
                         <p class="nav-link" style="color: red;text-align: center;">Giá trên đã bao gồm 10% thuế VAT</p>
-                        <a class="nav-link" href="internet" style="text-align: center;">Xem tất cả</a>
+                        <a class="nav-link" href="internet" style="text-align: center;">Xem thêm các gói cước khác</a>
                         <br>
                     </div>
                 </div>
@@ -227,8 +227,7 @@
 
                         </div><br>
                         <p class="nav-link" style="color: red;text-align: center;">Giá trên đã bao gồm 10% thuế VAT</p>
-                        <a class="nav-link" href="internet_giadinh" style="text-align: center;">Xem tất
-                            cả</a>
+                        <a class="nav-link" href="internet_giadinh" style="text-align: center;">Xem thêm các gói cước khác</a>
                         <br>
                         <div class="container">
 
@@ -337,7 +336,7 @@
 
                         </div><br>
                         <p class="nav-link" style="color: red;text-align: center;">Giá trên đã bao gồm 10% thuế VAT</p>
-                        <a class="nav-link" href="internet_combo" style="text-align: center;">Xem tất cả</a>
+                        <a class="nav-link" href="internet_combo" style="text-align: center;">Xem thêm các gói cước khác</a>
                         <br>
                     </div>
                 </div>
